Some BEM and SCSS editing

--- a/SASS/base/_common.scss
+++ b/SASS/base/_common.scss
@@ -1,9 +1,3 @@
-.section-heading {
-  @include fonts(700, 36, 42, 0.03);
-  margin-bottom: 50px;
-  text-align: center;
-  color: var(--secondary-text-color);
-}
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -11,8 +5,21 @@
 }
 .section {
   padding: 94px 0;
-}
 
+  &__title {
+    @include fonts(700, 36, 42, 0.03);
+    margin-bottom: 50px;
+    text-align: center;
+    color: var(--secondary-text-color);
+  }
+
+  &--no-pading {
+    padding-top: 0;
+  }
+  &--alt-bg {
+    background-color: var(--secondary-bg-color);
+  }
+}
 .img-box {
   position: relative;
   overflow: hidden;
