--- a/SASS/components/_modal-form.scss
+++ b/SASS/components/_modal-form.scss
@@ -21,6 +21,9 @@
     border-radius: 4px;
     outline: 0;
     @include transition(border-color);
+    &:focus {
+      border-color: var(--site-accent-color);
+    }
   }
 
   &__icon {
@@ -29,13 +32,9 @@
     top: 50%;
     transform: translateY(-50%);
     @include transition(fill);
-  }
-  &__input:focus {
-    border-color: var(--site-accent-color);
-  }
-
-  &__input-wrap:focus-within &__icon {
-    fill: var(--site-accent-color);
+    .form__input-wrap:focus-within & {
+      fill: var(--site-accent-color);
+    }
   }
 
   &__text {
@@ -47,13 +46,14 @@
     resize: none;
     @include transition(border);
     outline: 0;
-  }
-  &__text::placeholder {
-    @include fonts(400, 12, 14, 0.01);
-    color: rgba(117, 117, 117, 0.5);
-  }
-  &__text:focus {
-    border-color: var(--site-accent-color);
+
+    &::placeholder {
+      @include fonts(400, 12, 14, 0.01);
+      color: rgba(117, 117, 117, 0.5);
+    }
+    &:focus {
+      border-color: var(--site-accent-color);
+    }
   }
 }
 /*  ----------------- checkbox ---------------- */
@@ -70,6 +70,7 @@
   &__icon {
     fill: var(--primary-white-color);
   }
+
   &__custom-input {
     @extend %flexed;
 
@@ -80,14 +81,14 @@
     border-radius: 2px;
     outline: 0;
     @include transition(background-color, border);
-  }
-  &__input:focus + &__custom-input {
-    border-color: var(--site-accent-color);
-  }
 
-  &__input:checked + &__custom-input {
-    border: 0;
-    background-color: var(--site-accent-color);
+    .checkbox__input:focus + & {
+      border-color: var(--site-accent-color);
+    }
+    .checkbox__input:checked + & {
+      border: 0;
+      background-color: var(--site-accent-color);
+    }
   }
 }
 .form__btn {
