--- a/SASS/layouts/_our-team-section.scss
+++ b/SASS/layouts/_our-team-section.scss
@@ -1,18 +1,14 @@
 /* ----------------- OUR TEAM SECTION ----------------- */
 
 .team {
-  background-color: var(--secondary-bg-color);
+  display: flex;
+  gap: 30px;
 
-  &__list {
-    display: flex;
-    gap: 30px;
-  }
   &__item {
     background: var(--primary-white-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
   }
-
   &__content {
     padding: 30px 0;
   }
@@ -27,7 +23,6 @@
     text-align: center;
     @include fonts(null, 16, 19, 0.03);
   }
-
   &__social-list {
     @extend %flexed;
     gap: 10px;
@@ -39,10 +34,11 @@
     border-radius: 50%;
     fill: var(--icon-color);
     @include transition(background-color, fill);
-  }
-  &__social-link:hover,
-  &__social-link:focus {
-    background-color: var(--site-accent-color);
-    fill: var(--primary-white-color);
+
+    &:hover,
+    &:focus {
+      background-color: var(--site-accent-color);
+      fill: var(--primary-white-color);
+    }
   }
 }
