--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -60,16 +60,6 @@ img {
   height: auto;
 }
 
-.section-heading {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  margin-bottom: 50px;
-  text-align: center;
-  color: var(--secondary-text-color);
-}
-
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -78,6 +68,21 @@ img {
 
 .section {
   padding: 94px 0;
+}
+.section__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  margin-bottom: 50px;
+  text-align: center;
+  color: var(--secondary-text-color);
+}
+.section--no-pading {
+  padding-top: 0;
+}
+.section--alt-bg {
+  background-color: var(--secondary-bg-color);
 }
 
 .img-box {
@@ -344,10 +349,6 @@ img {
 }
 
 /* ---------- Adress & contacts -------- */
-.address {
-  color: var(--primary-white-color);
-}
-
 .footer-contacts {
   margin-top: 20px;
 }
@@ -364,6 +365,9 @@ img {
 }
 .footer-contacts__link:hover, .footer-contacts__link:focus {
   color: var(--site-accent-color);
+}
+.footer-contacts__link--white {
+  color: var(--primary-white-color);
 }
 
 /* --------- Social links -------- */
@@ -405,6 +409,9 @@ img {
   background: var(--primary-bg-color);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.footer-form__input:focus {
+  border: 2px solid rgba(255, 255, 255, 0.6);
+}
 .footer-form__label {
   position: absolute;
   left: 16px;
@@ -415,9 +422,6 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-form__input:focus {
-  border: 2px solid rgba(255, 255, 255, 0.6);
 }
 .footer-form__input:focus + .footer-form__label, .footer-form__input:not(:placeholder-shown) + .footer-form__label {
   transform: translate(-70px, 11px);
