--- a/sass_copy/layouts/_portfolio-projects.scss
+++ b/sass_copy/layouts/_portfolio-projects.scss
@@ -1,45 +1,25 @@
 /*  ----------------- PORTFOLIO PROJECTS ----------------- */
 .portfolio {
   &__list {
-    @include mq(tab) {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 30px;
-    }
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
   }
   &__card-content {
     padding: 20px 24px;
     border: 1px solid var(--border-color);
     border-top: none;
-    flex-grow: 1;
   }
   &__item {
-    @include mq(mob-only) {
-      &:not(:last-child) {
-        margin-bottom: 30px;
-      }
-    }
-
-    @include mq(tab) {
-      flex-basis: calc((100% - 30px) / 2);
-    }
-
-    @include mq(desk) {
-      flex-basis: calc((100% - 60px) / 3);
-    }
+    flex-basis: calc((100% - 60px) / 3);
   }
   &__link {
     display: inline-block;
     @include transition(box-shadow);
-
-    &:first-child {
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-    }
   }
   &__link:hover,
   &__link:focus {
+    display: block;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   }
   &__name {
@@ -59,7 +39,7 @@
     padding: 63px 24px;
 
     @include fonts(null, 18, 28, 0.03);
-    transform: translateY(101%);
+    transform: translateY(100%);
     @include transition(transform);
 
     color: var(--primary-white-color);
