--- a/sass_copy/layouts/_portfolio-filters.scss
+++ b/sass_copy/layouts/_portfolio-filters.scss
@@ -2,24 +2,13 @@
 
 .portfolio__filter {
   @extend %flexed;
-  column-gap: 8px;
-  margin-bottom: 30px;
-
-  @include mq(mob-only) {
-    flex-wrap: wrap;
-    justify-content: start;
-    margin-bottom: 40px;
-    row-gap: 15px;
-  }
-
-  @include mq(desk) {
-    margin-bottom: 50px;
-  }
+  gap: 8px;
+  margin-bottom: 50px;
 }
 .portfolio__filter-btn {
   padding: 6px 22px;
   border-radius: 4px;
-  border-color: transparent;
+  border: 0;
 
   @include fonts(500, 16, 26, 0.03);
   text-align: center;
