--- a/sass_copy/utils/_mixins.scss
+++ b/sass_copy/utils/_mixins.scss
@@ -1,21 +1,20 @@
-// -------------FONTS MIXIN --------------
-@mixin fonts($fw, $fs, $lh, $ls: false, $tt: false) {
+@mixin fonts($fw, $fs, $lh, $ls, $tt: false) {
   font-weight: $fw;
   font-size: $fs + px;
   line-height: setLineHeight($lh, $fs);
-  @if $ls {
-    letter-spacing: $ls + em;
-  }
+  letter-spacing: $ls + em;
+
   @if $tt {
     text-transform: $tt;
   }
 }
+
 // Calculating line-height value to multiplier
 @function setLineHeight($lh, $fs) {
   $lh-no-units: strip-unit($lh);
   $fs-no-units: strip-unit($fs);
 
-  $lh-value: calc($lh-no-units / $fs-no-units);
+  $lh-value: $lh-no-units / $fs-no-units;
 
   $line-height: decimal-round($lh-value, 2);
 
@@ -25,7 +24,7 @@
 // Delete unit from incoming value
 @function strip-unit($number) {
   @if type-of($number) == "number" and not unitless($number) {
-    @return calc($number / ($number * 0 + 1));
+    @return $number / ($number * 0 + 1);
   }
 
   @return $number;
@@ -61,9 +60,8 @@
   }
 }
 
-// -------------TRANSITION MIXIN --------------
 @mixin transition($property, $sproperty: false, $tproperty: false) {
-  $duration: var(--dur-time);
+  $duration: 250ms;
   $timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   @if $sproperty {
@@ -75,65 +73,5 @@
     }
   } @else {
     transition: $property $duration $timing-function;
-  }
-}
-
-// -------------MEDIA QUERY MIXIN --------------
-@mixin mq($type) {
-  $small: 320px;
-  $mob: 480px;
-  $tab: 768px;
-  $desk: 1200px;
-
-  @if $type == "pre-small" {
-    @media screen and (max-width: #{$small - 1}) {
-      @content;
-    }
-  }
-  @if $type == "small" {
-    @media screen and (min-width: $small) {
-      @content;
-    }
-  }
-  @if $type == "pre-mob" {
-    @media screen and (max-width: #{$mob - 1}) {
-      @content;
-    }
-  }
-  @if $type == "mob-only" {
-    @media screen and (max-width: #{$tab - 1}) {
-      @content;
-    }
-  }
-  @if $type == "mob" {
-    @media screen and (min-width: $mob) {
-      @content;
-    }
-  }
-  @if $type == "tab-only" {
-    @media screen and (min-width: $tab) and (max-width: #{$desk - 1}) {
-      @content;
-    }
-  }
-  @if $type == "tab" {
-    @media screen and (min-width: $tab) {
-      @content;
-    }
-  }
-  @if $type == "not-desk" {
-    @media screen and (max-width: #{$desk - 1}) {
-      @content;
-    }
-  }
-  @if $type == "desk" {
-    @media screen and (min-width: $desk) {
-      @content;
-    }
-  }
-
-  @if $type == "retina" {
-    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      @content;
-    }
   }
 }
