Adaptived menu for 320px, refactored "mq" mixin Changes to be committed: 	modified:   SASS/components/_backdrop-modal.scss 	modified:   SASS/components/_scroll-to-top.scss 	modified:   SASS/layouts/_features-section.scss 	modified:   SASS/layouts/_footer.scss 	modified:   SASS/layouts/_header.scss 	modified:   SASS/layouts/_our-team-section.scss 	modified:   SASS/layouts/_portfolio-filters.scss 	modified:   SASS/layouts/_portfolio-projects.scss 	modified:   SASS/utils/_mixins.scss 	modified:   css/main.css 	modified:   css/main.css.map 	modified:   css/main.min.css 	modified:   css/main.min.css.map

--- a/SASS/components/_backdrop-modal.scss
+++ b/SASS/components/_backdrop-modal.scss
@@ -10,7 +10,7 @@
   background-color: rgba(0, 0, 0, 0.4);
   @include transition(opacity);
 
-  @include mq(mob-only) {
+  @include mq(pre-tab) {
     padding: 93px 15px;
   }
 
