--- a/SASS/components/_scroll-to-top.scss
+++ b/SASS/components/_scroll-to-top.scss
@@ -32,7 +32,7 @@
     fill: var(--secondary-text-color);
   }
 
-  @include mq(mob-only) {
+  @include mq(pre-tab) {
     &.is-open {
       display: none;
     }
