--- a/SASS/layouts/_footer.scss
+++ b/SASS/layouts/_footer.scss
@@ -62,7 +62,7 @@
 /* --------- Social links -------- */
 
 .footer-social {
-  @include mq(mob-only) {
+  @include mq(pre-tab) {
     margin: 60px auto;
   }
 
