--- a/SASS/layouts/_portfolio-filters.scss
+++ b/SASS/layouts/_portfolio-filters.scss
@@ -5,7 +5,7 @@
   column-gap: 8px;
   margin-bottom: 30px;
 
-  @include mq(mob-only) {
+  @include mq(pre-tab) {
     flex-wrap: wrap;
     justify-content: start;
     margin-bottom: 40px;
