Fixed mistakes with menu-container. Finaly finished adaptive makeup.
Changes to be committed:
	modified:   SASS/base/_common.scss
	modified:   SASS/layouts/_header.scss
	modified:   css/main.css
	modified:   css/main.css.map
	modified:   css/main.min.css
	modified:   css/main.min.css.map
	modified:   index.html
	modified:   js/mobile-menu.js

--- a/SASS/layouts/_header.scss
+++ b/SASS/layouts/_header.scss
@@ -64,7 +64,7 @@
     align-items: center;
   }
 
-  @include mq(small) {
+  @include mq(pre-tab) {
     position: fixed;
     z-index: 2;
     flex-direction: column;
@@ -72,21 +72,22 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    padding: 24px 20px;
-  }
-
-  @include mq(mob-only) {
     padding: 48px 40px;
+
+    background-color: var(--primary-white-color);
+
+    transform-origin: top;
+    transform: translateY(-100%);
+    @include transition(transform);
+
+    &.is-open {
+      transform: translateY(100%);
+    }
   }
-
-  background-color: var(--primary-white-color);
-
-  transform-origin: top;
-  transform: translateY(-100%);
-  @include transition(transform);
-
-  &.is-open {
-    transform: translateY(100%);
+}
+.menu-container.is-open {
+  @include mq(pre-mob) {
+    padding: 24px 20px;
   }
 }
 
